<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ClipboardFragment">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="#2B353E"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tvSample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/send_btn" />

            <Button
                android:id="@+id/cancle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/cancle_btn" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>